2004-05-16  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b120

	* Change: Users in manage_users.php are now sorted.

2004-05-15  Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b119

	* Change: Add recursive watermark of albums.

2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b118

	* Change: Better missing parent detection, minor text changes

2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b117

	* Fix: Actually enable attachOrphans(), since I'd forgotten to pass its
	  variable

2004-05-14  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b116

	* Fix: Double echo in setup/confirm.inc.
	  Thanks to Terje.

2004-05-14  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b115

	*  Change: Beautification and translateable tools/find_orphans.php

2004-05-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b114

	* Change:  tools/find_orphans.php now uses a form to gather confirmation
	  from the user before performing any changes.  It does not yet support 
	  customized-reattachment.

2004-05-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b113

	* Add:  Initial web-accessible version of find_orphans.php
	  - Does not yet prompt for verification
	  - Orphans are returned to their original parent
	    If the parent is missing they are turned into root albums
	  - Secured so that only admins can access it

2004-05-13 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b112

	* Fix: Some counter didnt work, due to wrong use of pluralize_n2

	* Change: Complete replace of pluralize_n with n2

	* Fix: Typo in function galleryDocs

2004-05-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b111

	* Fix: Don't use strict numPhotos where it was being used!
	  Damaging to albums that contain no images (only sub-albums)

2004-05-13 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b110

	* Fix: - Check for ngettext installed
	  - Translation was not correct caught.

2004-05-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b109
