@@ -1,3 +1,11 @@
+2004-05-16  Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b121
+
+	* Change: Add watermark preview.  Disable links to watermark
+	  album when album is empty. Alignment using X and Y coordinates
+	  can use percents.
+	* Fix:  Watermark alignment defaults to lower right instead of
+	  nothing.  Watermarks incorrectly clipped to the bottom.
+
 2004-05-16  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b120
 
 	* Change: Users in manage_users.php are now sorted.
